Changes after code review

--- a/WebScrapper/src/test/resources/application.properties
+++ b/WebScrapper/src/test/resources/application.properties
@@ -4,3 +4,11 @@ web.scrapper.url=http://www.mail-archive.com/cassandra-user@incubator.apache.org
 target.file.location=D:/Test/
 executor.pool.thread.count=24
 web.scrapped.file.name=WebScrappedData1.html
+
+
+##Properties for Testing 
+#FileName with path for testing of WebScrapperService.startWebScrapping
+web.scrapped.file.name.path=D:/Test/WebScrappedData1.html
+
+# Sample html from where the html data will be read to extract hyperlinks.
+sample.html.file.path=D:/Test/Test.html
