--- a/WebScrapper/src/main/resources/application.properties
+++ b/WebScrapper/src/main/resources/application.properties
@@ -4,4 +4,4 @@ web.scrapper.url=http://www.mail-archive.com/cassandra-user@incubator.apache.org
 target.file.location=D:/Test/
 executor.pool.thread.count=24
 web.scrapped.file.name=WebScrappedData2.html
-web.scrapper.cron.expression=* * * * * ?
+index.directory.file.path=D:/Lucene/IndexFiles
