--- a/WebScrapper/src/test/resources/application.properties
+++ b/WebScrapper/src/test/resources/application.properties
@@ -1,14 +1,19 @@
 #Properties required for web Scrapping.
 
 web.scrapper.url=http://www.mail-archive.com/cassandra-user@incubator.apache.org/maillist.html
-target.file.location=D:/Test/
+target.file.location=/output/
 executor.pool.thread.count=24
 web.scrapped.file.name=WebScrappedData1.html
 
 
+
+
 ##Properties for Testing 
 #FileName with path for testing of WebScrapperService.startWebScrapping
-web.scrapped.file.name.path=D:/Test/WebScrappedData1.html
+web.scrapped.file.name.path=/WebScrappedData1.html
 
 # Sample html from where the html data will be read to extract hyperlinks.
 sample.html.file.path=D:/Test/Test.html
+
+#constant part of the scrapper url:
+constant.url.link=http://www.mail-archive.com/cassandra-user@incubator.apache.org 
